# bayesian-X-Leaner

./: .gitignore  LICENSE  README.md  REPRODUCE.md  pyproject.toml  rerun_all.sh
benchmarks/: __init__.py  dgps.py  estimators.py  make_paper_figures.py  metrics.py  plot_results.py  run_adaptive_basis.py  run_auto_severity.py  run_bart_comparison.py  run_basis_ablation.py  run_bcf.py  run_c_delta_mad_sweep_fast.py  run_c_whale_sensitivity.py  run_cate_benchmark.py  run_cate_coverage.py  run_component_ablation.py  run_coverage_comparison.py  run_eigenvalue_ridge_bias_fast.py  run_gamma_divergence.py  run_hillstrom.py  run_hillstrom_placebo.py  run_hillstrom_subgroups.py  run_hillstrom_true_holdout.py  run_ihdp_basis_ablation.py  run_ihdp_benchmark.py  run_ihdp_extended.py  run_lalonde_madnorm.py  run_learning_rate.py  run_mad_rescaling_and_prior.py  run_mcmc_diagnostics_fast.py  run_modular_bayes.py  run_n_splits_sensitivity.py  run_nonlinear_cate.py  run_nuisance_bootstrap.py  run_nuisance_depth.py  run_nuisance_loss_sweep.py  run_overlap_experiment.py  run_overlap_isolation_fast.py  run_pareto_contamination.py  run_pipeline_comparison.py  (+22 more)
docs/: README.md  architecture.md  baselines-index.md  implementation.md  motivation.md  research-roadmap.md  testing-strategy.md
paper/: .gitignore  README.md  check.sh  main.tex  main_tmlr.tex  refs.bib
sert_xlearner/: __init__.py  targeted_bayesian_xlearner.py
tests/: test_adtech_whale_smearing.py  test_algebraic_orthogonalization.py  test_catboost_ric.py  test_clinical_extreme_imbalance.py  test_deep_tail_extrapolation.py  (+10 more)
(+167 files in other folders)
