[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sert_xlearner"
version = "0.1.0"
authors = [
  { name="Eichi Uehara", email="eichi.uehara@aflo.one" },
]
description = "Bayesian X-Learner: calibrated posterior CATE inference under heavy-tailed outcomes."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["causal-inference", "treatment-effects", "bayesian", "robust-statistics", "heavy-tailed"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "xgboost",
    "numpyro",
    "jax",
    "jaxlib",
]

[project.optional-dependencies]
test = [
    "pytest",
]
benchmark = [
    "econml",
    "doubleml",
    "causalml",
    "pymc",
    "pymc-bart",
]

[tool.pytest.ini_options]
markers = [
    "benchmark: slow multi-seed Monte Carlo runs (deselected by default; run with -m benchmark)",
]
addopts = "-m 'not benchmark'"
